@@ -78,7 +78,7 @@ recapitulates the input information, gives joint displacements in global coordin
 </p>
 
 <p><b>Frame3DD</b> writes a
-<a href="http://www.duke.edu/~hpgavin/gnuplot.html">Gnuplot</a>
+<a href="http://www.gnuplot.info/">Gnuplot</a>
 script file used for viewing deformed frames and dynamic mode shapes.
 If the Output Data is written to a file called <b>MyResultsA.out</b>,
 the Gnuplot script is written to a file called <b>MyResultsA.plt</b>.
@@ -154,7 +154,7 @@ Download</a> Frame3DD and save the Frame3DD folder to your Desktop (more details
 frame3dd  examples/exE.3dd  examples/exE.out
 </pre>
 <li>Open the Output Data file using a good text editor and view the Output Data.
-<li>Plot the structural configuration, the deformed structural shape, and mode-shapes, by starting <a href="http://www.duke.edu/~hpgavin/gnuplot.html">Gnuplot</a>, and typing
+<li>Plot the structural configuration, the deformed structural shape, and mode-shapes, by starting <a href="http://www.gnuplot.info/">Gnuplot</a>, and typing
 <pre>
      gnuplot>   cd 'Desktop/Frame3DD/examples'
      gnuplot>   load 'exE.plt'
@@ -355,7 +355,7 @@ frame3dd  MyFrame.3dd  MyResultsA.out
 </ol>
 
 <p>
-Use <a href="http://www.duke.edu/~hpgavin/gnuplot.html">Gnuplot</a> 
+Use <a href="http://www.gnuplot.info/">Gnuplot</a> 
 to view the graphical output.  
 </p>
 
@@ -525,7 +525,7 @@ frame3dd  MyFrame.3dd  MyResultsA.out
 </ol>
 
 <p>
-Use <a href="http://www.duke.edu/~hpgavin/gnuplot.html">Gnuplot</a> 
+Use <a href="http://www.gnuplot.info/">Gnuplot</a> 
 to view the graphical output.  
 </p>
 
@@ -677,7 +677,7 @@ frame3dd  MyFrame.3dd  MyResultsA.out
 </ol>
 
 <p>
-Use <a href="http://www.duke.edu/~hpgavin/gnuplot.html">Gnuplot</a> 
+Use <a href="http://www.gnuplot.info/">Gnuplot</a> 
 to view the graphical output.  
 </p>
 
